--- a/code/projekt_1.ipynb
+++ b/code/projekt_1.ipynb
@@ -8,6 +8,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# todo\n",
+    "- wybrac modele\n",
+    "- wybrac parametry i range parametrow do random searcha\n",
+    "- przeanalizowac wyniki i wykresiki porobic"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -22,17 +32,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "diabetes = pd.DataFrame(pd.read_csv(\"C:/Users/jancw/Desktop/Studia/Sem5/AutoML/Project_1/Datasets/diabetes.csv\"))\n",
-    "students = pd.DataFrame(pd.read_csv('C:/Users/jancw/Desktop/Studia/Sem5/AutoML/Project_1/Datasets/students.csv'))\n",
+    "# diabetes = pd.DataFrame(pd.read_csv(\"C:/Users/jancw/Desktop/Studia/Sem5/AutoML/Project_1/Datasets/diabetes.csv\"))\n",
+    "diabetes = pd.DataFrame(pd.read_csv(\"./data/diabetes.csv\"))\n",
+    "students = pd.DataFrame(pd.read_csv('./data/students.csv'))\n",
+    "# students = pd.DataFrame(pd.read_csv('C:/Users/jancw/Desktop/Studia/Sem5/AutoML/Project_1/Datasets/students.csv'))\n",
     "students = students.loc[students.Target!='Enrolled']\n",
-    "telco = pd.DataFrame(pd.read_csv('C:/Users/jancw/Desktop/Studia/Sem5/AutoML/Project_1/Datasets/telco.csv'))\n",
+    "# telco = pd.DataFrame(pd.read_csv('C:/Users/jancw/Desktop/Studia/Sem5/AutoML/Project_1/Datasets/telco.csv'))\n",
+    "telco = pd.DataFrame(pd.read_csv('./data/telco.csv'))\n",
     "telco['TotalCharges'] = pd.to_numeric(telco['TotalCharges'],errors='coerce')\n",
     "telco = telco.iloc[:,1:] # id column\n",
-    "pistachio = pd.DataFrame(pd.read_csv('C:/Users/jancw/Desktop/Studia/Sem5/AutoML/Project_1/Datasets/pistachio.csv'))\n",
+    "# pistachio = pd.DataFrame(pd.read_csv('C:/Users/jancw/Desktop/Studia/Sem5/AutoML/Project_1/Datasets/pistachio.csv'))\n",
+    "pistachio = pd.DataFrame(pd.read_csv('./data/pistachio.csv'))\n",
     "datasets = {'diabetes': diabetes,'students': students,'telco': telco,'pistachio': pistachio}"
    ]
   },
