--- a/code/projekt_1.ipynb
+++ b/code/projekt_1.ipynb
@@ -1696,7 +1696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -1704,11 +1704,11 @@
      "output_type": "stream",
      "text": [
       "Logistic Regression samples:\n",
-      "  Sample 1: {'alpha': 383.5300582621992, 'l1_ratio': 0.9507143064099162}\n",
-      "  Sample 2: {'alpha': 749.5627729773788, 'l1_ratio': 0.5986584841970366}\n",
-      "  Sample 3: {'alpha': 159.764064375555, 'l1_ratio': 0.15599452033620265}\n",
-      "  Sample 4: {'alpha': 59.47859542273625, 'l1_ratio': 0.8661761457749352}\n",
-      "  Sample 5: {'alpha': 615.5427485875458, 'l1_ratio': 0.7080725777960455}\n",
+      "  Sample 1: {'C': 37.464011884736244, 'penalty': 'l1', 'solver': 'liblinear'}\n",
+      "  Sample 2: {'C': 18.35347898661638, 'penalty': 'l2', 'solver': 'liblinear'}\n",
+      "  Sample 3: {'C': 59.87584841970366, 'penalty': 'l1', 'solver': 'liblinear'}\n",
+      "  Sample 4: {'C': 44.59327528535911, 'penalty': 'l1', 'solver': 'liblinear'}\n",
+      "  Sample 5: {'C': 5.818361216819946, 'penalty': 'l2', 'solver': 'liblinear'}\n",
       "Decision Tree samples:\n",
       "  Sample 1: {'ccp_alpha': 0.3745401188473625, 'max_depth': 29, 'min_samples_leaf': 15, 'min_samples_split': 44}\n",
       "  Sample 2: {'ccp_alpha': 0.7796910002727693, 'max_depth': 21, 'min_samples_leaf': 39, 'min_samples_split': 59}\n",
@@ -1716,11 +1716,11 @@
       "  Sample 4: {'ccp_alpha': 0.33370861113902184, 'max_depth': 8, 'min_samples_leaf': 24, 'min_samples_split': 4}\n",
       "  Sample 5: {'ccp_alpha': 0.020584494295802447, 'max_depth': 2, 'min_samples_leaf': 24, 'min_samples_split': 45}\n",
       "Random Forest samples:\n",
-      "  Sample 1: {'bootstrap': True, 'max_features': 0.7965429868602328, 'max_samples': 0.11834347898661639, 'min_samples_leaf': 8, 'n_estimators': 1725}\n",
-      "  Sample 2: {'bootstrap': True, 'max_features': 0.15601864044243652, 'max_samples': 0.11559945203362026, 'min_samples_leaf': 11, 'n_estimators': 1483}\n",
-      "  Sample 3: {'bootstrap': False, 'max_features': 0.33370861113902184, 'max_samples': 0.11428668179219409, 'min_samples_leaf': 3, 'n_estimators': 1686}\n",
-      "  Sample 4: {'bootstrap': True, 'max_features': 0.9699098521619943, 'max_samples': 0.18324426408004219, 'min_samples_leaf': 6, 'n_estimators': 386}\n",
-      "  Sample 5: {'bootstrap': False, 'max_features': 0.9922115592912175, 'max_samples': 0.16174815096277168, 'min_samples_leaf': 26, 'n_estimators': 22}\n"
+      "  Sample 1: {'max_features': 0.3745401188473625, 'max_samples': 0.19507143064099164, 'min_samples_leaf': 11, 'n_estimators': 1096}\n",
+      "  Sample 2: {'max_features': 0.5986584841970366, 'max_samples': 0.11560186404424366, 'min_samples_leaf': 19, 'n_estimators': 1239}\n",
+      "  Sample 3: {'max_features': 0.05808361216819946, 'max_samples': 0.18661761457749354, 'min_samples_leaf': 4, 'n_estimators': 872}\n",
+      "  Sample 4: {'max_features': 0.7080725777960455, 'max_samples': 0.10205844942958026, 'min_samples_leaf': 2, 'n_estimators': 344}\n",
+      "  Sample 5: {'max_features': 0.8324426408004217, 'max_samples': 0.12123391106782762, 'min_samples_leaf': 28, 'n_estimators': 277}\n"
      ]
     }
    ],
@@ -1732,9 +1732,10 @@
     "\n",
     "\n",
     "param_distributions = {\n",
-    "    'Logistic Regression': {  \n",
-    "        'l1_ratio': uniform(0, 1),  \n",
-    "        'alpha': uniform(2**-10, 2**10),  \n",
+    "    'Logistic Regression': {\n",
+    "        'C': uniform(0.01, 100),  # Regularization strength\n",
+    "        'penalty': ['l1', 'l2'],   # Type of regularization\n",
+    "        'solver': ['liblinear'],   # solvers that support 'l1' and 'l2'\n",
     "    },\n",
     "    'Decision Tree': { \n",
     "        'ccp_alpha': uniform(0, 1), \n",
@@ -1753,7 +1754,7 @@
     "    # },\n",
     "    'Random Forest': {  \n",
     "        'n_estimators': randint(1, 2001),\n",
-    "        'bootstrap': [True, False], \n",
+    "        # 'bootstrap': [True, False], \n",
     "        'max_samples': uniform(0.1, 0.1),\n",
     "        'max_features': uniform(0, 1),  \n",
     "        'min_samples_leaf': randint(1, 31), \n",
@@ -1785,7 +1786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1806,7 +1807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1830,26 +1831,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
     "for model in models.keys():\n",
-    "    optimize('Decision Tree', param_samples['Decision Tree'])  "
+    "    optimize(model, param_samples[model])  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Random Forest': {'diabetes': None,\n",
-       "  'students': None,\n",
-       "  'telco': None,\n",
-       "  'pistachio': None},\n",
+       "{'Random Forest': {'diabetes': Pipeline(steps=[('trans',\n",
+       "                   ColumnTransformer(transformers=[('numeric',\n",
+       "                                                    Pipeline(steps=[('impute',\n",
+       "                                                                     SimpleImputer()),\n",
+       "                                                                    ('scale',\n",
+       "                                                                     MinMaxScaler())]),\n",
+       "                                                    <sklearn.compose._column_transformer.make_column_selector object at 0x0000020F78504A70>),\n",
+       "                                                   ('cat',\n",
+       "                                                    Pipeline(steps=[('ohe',\n",
+       "                                                                     OneHotEncoder(drop='first')),\n",
+       "                                                                    ('impute',\n",
+       "                                                                     SimpleImputer())]),\n",
+       "                                                    <sklearn.compose._column_transformer.make_column_selector object at 0x0000020F7F2D5D00>)])),\n",
+       "                  ('model',\n",
+       "                   RandomForestClassifier(max_features=0.7080725777960455,\n",
+       "                                          max_samples=0.10205844942958026,\n",
+       "                                          min_samples_leaf=2,\n",
+       "                                          n_estimators=344))]),\n",
+       "  'students': Pipeline(steps=[('trans',\n",
+       "                   ColumnTransformer(transformers=[('numeric',\n",
+       "                                                    Pipeline(steps=[('impute',\n",
+       "                                                                     SimpleImputer()),\n",
+       "                                                                    ('scale',\n",
+       "                                                                     MinMaxScaler())]),\n",
+       "                                                    <sklearn.compose._column_transformer.make_column_selector object at 0x0000020F78504A70>),\n",
+       "                                                   ('cat',\n",
+       "                                                    Pipeline(steps=[('ohe',\n",
+       "                                                                     OneHotEncoder(drop='first')),\n",
+       "                                                                    ('impute',\n",
+       "                                                                     SimpleImputer())]),\n",
+       "                                                    <sklearn.compose._column_transformer.make_column_selector object at 0x0000020F7F2D5D00>)])),\n",
+       "                  ('model',\n",
+       "                   RandomForestClassifier(max_features=0.7080725777960455,\n",
+       "                                          max_samples=0.10205844942958026,\n",
+       "                                          min_samples_leaf=2,\n",
+       "                                          n_estimators=344))]),\n",
+       "  'telco': Pipeline(steps=[('trans',\n",
+       "                   ColumnTransformer(transformers=[('numeric',\n",
+       "                                                    Pipeline(steps=[('impute',\n",
+       "                                                                     SimpleImputer()),\n",
+       "                                                                    ('scale',\n",
+       "                                                                     MinMaxScaler())]),\n",
+       "                                                    <sklearn.compose._column_transformer.make_column_selector object at 0x0000020F78504A70>),\n",
+       "                                                   ('cat',\n",
+       "                                                    Pipeline(steps=[('ohe',\n",
+       "                                                                     OneHotEncoder(drop='first')),\n",
+       "                                                                    ('impute',\n",
+       "                                                                     SimpleImputer())]),\n",
+       "                                                    <sklearn.compose._column_transformer.make_column_selector object at 0x0000020F7F2D5D00>)])),\n",
+       "                  ('model',\n",
+       "                   RandomForestClassifier(max_features=0.7080725777960455,\n",
+       "                                          max_samples=0.10205844942958026,\n",
+       "                                          min_samples_leaf=2,\n",
+       "                                          n_estimators=344))]),\n",
+       "  'pistachio': Pipeline(steps=[('trans',\n",
+       "                   ColumnTransformer(transformers=[('numeric',\n",
+       "                                                    Pipeline(steps=[('impute',\n",
+       "                                                                     SimpleImputer()),\n",
+       "                                                                    ('scale',\n",
+       "                                                                     MinMaxScaler())]),\n",
+       "                                                    <sklearn.compose._column_transformer.make_column_selector object at 0x0000020F78504A70>),\n",
+       "                                                   ('cat',\n",
+       "                                                    Pipeline(steps=[('ohe',\n",
+       "                                                                     OneHotEncoder(drop='first')),\n",
+       "                                                                    ('impute',\n",
+       "                                                                     SimpleImputer())]),\n",
+       "                                                    <sklearn.compose._column_transformer.make_column_selector object at 0x0000020F7F2D5D00>)])),\n",
+       "                  ('model',\n",
+       "                   RandomForestClassifier(max_features=0.7080725777960455,\n",
+       "                                          max_samples=0.10205844942958026,\n",
+       "                                          min_samples_leaf=2,\n",
+       "                                          n_estimators=344))])},\n",
        " 'Decision Tree': {'diabetes': Pipeline(steps=[('trans',\n",
        "                   ColumnTransformer(transformers=[('numeric',\n",
        "                                                    Pipeline(steps=[('impute',\n",
@@ -1918,13 +1987,73 @@
        "                   DecisionTreeClassifier(ccp_alpha=0.15599452033620265,\n",
        "                                          max_depth=11, min_samples_leaf=11,\n",
        "                                          min_samples_split=25))])},\n",
-       " 'Logistic Regression': {'diabetes': None,\n",
-       "  'students': None,\n",
-       "  'telco': None,\n",
-       "  'pistachio': None}}"
+       " 'Logistic Regression': {'diabetes': Pipeline(steps=[('trans',\n",
+       "                   ColumnTransformer(transformers=[('numeric',\n",
+       "                                                    Pipeline(steps=[('impute',\n",
+       "                                                                     SimpleImputer()),\n",
+       "                                                                    ('scale',\n",
+       "                                                                     MinMaxScaler())]),\n",
+       "                                                    <sklearn.compose._column_transformer.make_column_selector object at 0x0000020F78504A70>),\n",
+       "                                                   ('cat',\n",
+       "                                                    Pipeline(steps=[('ohe',\n",
+       "                                                                     OneHotEncoder(drop='first')),\n",
+       "                                                                    ('impute',\n",
+       "                                                                     SimpleImputer())]),\n",
+       "                                                    <sklearn.compose._column_transformer.make_column_selector object at 0x0000020F7F2D5D00>)])),\n",
+       "                  ('model',\n",
+       "                   LogisticRegression(C=37.464011884736244, penalty='l1',\n",
+       "                                      solver='liblinear'))]),\n",
+       "  'students': Pipeline(steps=[('trans',\n",
+       "                   ColumnTransformer(transformers=[('numeric',\n",
+       "                                                    Pipeline(steps=[('impute',\n",
+       "                                                                     SimpleImputer()),\n",
+       "                                                                    ('scale',\n",
+       "                                                                     MinMaxScaler())]),\n",
+       "                                                    <sklearn.compose._column_transformer.make_column_selector object at 0x0000020F78504A70>),\n",
+       "                                                   ('cat',\n",
+       "                                                    Pipeline(steps=[('ohe',\n",
+       "                                                                     OneHotEncoder(drop='first')),\n",
+       "                                                                    ('impute',\n",
+       "                                                                     SimpleImputer())]),\n",
+       "                                                    <sklearn.compose._column_transformer.make_column_selector object at 0x0000020F7F2D5D00>)])),\n",
+       "                  ('model',\n",
+       "                   LogisticRegression(C=37.464011884736244, penalty='l1',\n",
+       "                                      solver='liblinear'))]),\n",
+       "  'telco': Pipeline(steps=[('trans',\n",
+       "                   ColumnTransformer(transformers=[('numeric',\n",
+       "                                                    Pipeline(steps=[('impute',\n",
+       "                                                                     SimpleImputer()),\n",
+       "                                                                    ('scale',\n",
+       "                                                                     MinMaxScaler())]),\n",
+       "                                                    <sklearn.compose._column_transformer.make_column_selector object at 0x0000020F78504A70>),\n",
+       "                                                   ('cat',\n",
+       "                                                    Pipeline(steps=[('ohe',\n",
+       "                                                                     OneHotEncoder(drop='first')),\n",
+       "                                                                    ('impute',\n",
+       "                                                                     SimpleImputer())]),\n",
+       "                                                    <sklearn.compose._column_transformer.make_column_selector object at 0x0000020F7F2D5D00>)])),\n",
+       "                  ('model',\n",
+       "                   LogisticRegression(C=37.464011884736244, penalty='l1',\n",
+       "                                      solver='liblinear'))]),\n",
+       "  'pistachio': Pipeline(steps=[('trans',\n",
+       "                   ColumnTransformer(transformers=[('numeric',\n",
+       "                                                    Pipeline(steps=[('impute',\n",
+       "                                                                     SimpleImputer()),\n",
+       "                                                                    ('scale',\n",
+       "                                                                     MinMaxScaler())]),\n",
+       "                                                    <sklearn.compose._column_transformer.make_column_selector object at 0x0000020F78504A70>),\n",
+       "                                                   ('cat',\n",
+       "                                                    Pipeline(steps=[('ohe',\n",
+       "                                                                     OneHotEncoder(drop='first')),\n",
+       "                                                                    ('impute',\n",
+       "                                                                     SimpleImputer())]),\n",
+       "                                                    <sklearn.compose._column_transformer.make_column_selector object at 0x0000020F7F2D5D00>)])),\n",
+       "                  ('model',\n",
+       "                   LogisticRegression(C=37.464011884736244, penalty='l1',\n",
+       "                                      solver='liblinear'))])}}"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
