--- a/code/projekt_1.ipynb
+++ b/code/projekt_1.ipynb
@@ -2025,6 +2025,35 @@
     "\n",
     "print(tunability_random['Decision Tree'])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Testowanie\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 370,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# coś takiego\n",
+    "\n",
+    "# from scipy.stats import wilcoxon\n",
+    "\n",
+    "# # Oblicz test Wilcoxona\n",
+    "# w_stat, p_value = wilcoxon(accuracy_random, accuracy_bayes)\n",
+    "\n",
+    "# print(\"Wilcoxon Statystyka:\", w_stat)\n",
+    "# print(\"p-Wartość:\", p_value)\n",
+    "\n",
+    "# if p_value < 0.05:\n",
+    "#     print(\"Różnica jest statystycznie istotna.\")\n",
+    "# else:\n",
+    "#     print(\"Brak statystycznie istotnej różnicy między metodami.\")"
+   ]
   }
  ],
  "metadata": {
